name:                imowai
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/IMOKURI/imowai#readme
license:             BSD3
license-file:        LICENSE
author:              IMOKURI
maintainer:          nenegi.01mo@gmail.com
copyright:           2015, IMOKURI
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable imowai
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , wai
                     , warp
                     , http-types
