name:                imowai
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/IMOKURI/imowai#readme
license:             BSD3
license-file:        LICENSE
author:              IMOKURI
maintainer:          nenegi.01mo@gmail.com
copyright:           2015, IMOKURI
category:            Development
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/IMOKURI/wai-example-using-buildback-stack.git

library
  exposed-modules:     Imo.App
  build-depends:       base >= 4.7 && < 5
                     , wai
                     , http-types
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

executable imowai
  main-is:             Main.hs
  other-modules:       Imo.App
  build-depends:       base >= 4.7 && < 5
                     , imowai
                     , wai
                     , warp
                     , http-types
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Imo.App
  build-depends:       base >= 4.7 && < 5
                     , imowai
                     , wai
                     , wai-extra
                     , http-types
                     , hspec
  ghc-options:         -Wall
  hs-source-dirs:      tests
                     , src
  default-language:    Haskell2010

